--- a/MailerPro2/Views/Home/Index.cshtml
+++ b/MailerPro2/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
             <p>
 
             </p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Click to Enter an address</a></p>
+            <p><a class="btn btn-default" href="https://localhost:44307/Address/Index">Click to Enter an address</a></p>
         </div>
         <div class="col-md-4">
             @*<h2>Getting started</h2>
@@ -63,7 +63,7 @@
             <p>
 
             </p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Click for Address List</a></p>
+            <p><a class="btn btn-default" href="https://localhost:44307/Address/Index">Click for Address List</a></p>
         </div>
         <div class="col-md-4">
             @*<h2>Getting started</h2>
@@ -87,7 +87,7 @@
             <p>
 
             </p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Click to Update Address</a></p>
+            <p><a class="btn btn-default" href="https://localhost:44307/Address/Index">Click to Update Address</a></p>
         </div>
         <div class="col-md-4">
             @*<h2>Getting started</h2>
