cleaner front end

--- a/MailerPro2/Views/Address/Details.cshtml
+++ b/MailerPro2/Views/Address/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Address Details";
 }
 
-<h2>Address Details</h2>
+<h2 style="font-family:'Courier New'">Address Details</h2>
 
-<div>
-    <h4>Address</h4>
+<div style="font-family:'Courier New'">
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -52,7 +52,7 @@
 
     </dl>
 </div>
-<p>
+<p style="font-family:'Courier New'">
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) | <br />
     @Html.ActionLink("Back to List", "Index")<br />
     @Html.ActionLink("Delete", "Delete", new { id = Model.ID })<br />
