--- a/MailerPro2/Views/Address/Create.cshtml
+++ b/MailerPro2/Views/Address/Create.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Add Address";
 }
 
-<h2>Add Address</h2>
+<h2 style="font-family:'Courier New'">Add Address</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>AddressAdd</h4>
+    <div class="form-horizontal" style="font-family:'Courier New'">
+        <
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -62,7 +62,7 @@
     </div>
 }
 
-<div>
+<div style="font-family:'Courier New'">
     @Html.ActionLink("Back to List", "Index")
 </div>
 
