--- a/MailerPro2/Views/Address/Delete.cshtml
+++ b/MailerPro2/Views/Address/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 style="font-family:'Courier New'">Delete Address?</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Address</h4>
+
+<div style="font-family:'Courier New'">
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -56,7 +56,7 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
+        <div class="form-actions no-color" style="font-family:'Courier New'">
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
