--- a/MailerPro2/Views/Address/Edit.cshtml
+++ b/MailerPro2/Views/Address/Edit.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Update";
 }
 
-<h2>Edit</h2>
+<h2 style="font-family:'Courier New'">Update Address</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>AddressUpdate</h4>
+    <div class="form-horizontal" style="font-family:'Courier New'">
+        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
@@ -64,7 +64,7 @@
     </div>
 }
 
-<div>
+<div style="font-family:'Courier New'">
     @Html.ActionLink("Back to List", "Index")
 </div>
 
