--- a/MailerPro2/Views/Home/Index.cshtml
+++ b/MailerPro2/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron" style="background-color:blue">
-    <div class="row" style="text-align:center;color:white">
+    <div class="row" style="text-align:center;color:white;text-shadow:">
         <div class="col-md-4">
             <!--<h1>Mailer Pro</h1>
             <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
@@ -38,7 +38,7 @@
             <p>
 
             </p>
-            <p><a class="btn btn-default" href="https://localhost:44307/Address/Index">Click to Enter an address</a></p>
+            <p><a class="btn btn-default" href="https://localhost:44307/Address/Create">Click to Enter an address</a></p>
         </div>
         <div class="col-md-4">
             @*<h2>Getting started</h2>
@@ -76,20 +76,20 @@
         </div>
     </div>
 
-    <div class="row" style="text-align:center">
-        <div class="col-md-4">
+    <!--<div class="row" style="text-align:center">
+        <div class="col-md-4">-->
             @*<h2>Web Hosting</h2>
                 <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
                 <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>*@
-        </div>
+        <!--</div>
         <div class="col-md-4">
             <h2 style="font-family:'Courier New'"><i>Update Address</i></h2>
             <p>
 
             </p>
-            <p><a class="btn btn-default" href="https://localhost:44307/Address/Index">Click to Update Address</a></p>
+            <p><a class="btn btn-default" href="https://localhost:44307/Address/Edit">Click to Update Address</a></p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4">-->
             @*<h2>Getting started</h2>
                 <p>
                     ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
@@ -97,23 +97,23 @@
                     for enjoyable, agile development.
                 </p>
                 <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>*@
-        </div>
-    </div>
+        <!--</div>
+    </div>-->
 
-    <div class="row" style="text-align:center">
-        <div class="col-md-4">
+    <!--<div class="row" style="text-align:center">
+        <div class="col-md-4">-->
             @*<h2>Web Hosting</h2>
                 <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
                 <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>*@
-        </div>
+        <!--</div>
         <div class="col-md-4">
             <h2 style="font-family:'Courier New'"><i>Delete Address</i></h2>
             <p>
 
             </p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Click to Delete an Address</a></p>
+            <p><a class="btn btn-default" href="https://localhost:44307/Address/Delete">Click to Delete an Address</a></p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4">-->
             @*<h2>Getting started</h2>
                 <p>
                     ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
@@ -121,6 +121,6 @@
                     for enjoyable, agile development.
                 </p>
                 <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>*@
-        </div>
-    </div>
+        <!--</div>
+    </div>-->
 </div>
